# means

./: ChangeLog.md  README.md  means.cabal
Data/Semigroup/: Means.hs
