name:                means
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              winterland1989
maintainer:          winterland1989@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Semigroup.Means
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base == 4.*, semigroups > 0.18
  -- hs-source-dirs:      
  default-language:    Haskell2010
